--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   <div id="resume">
     <header>
       <div class="profile-pic">
-        <img src="/images/c.jpg" alt="Yesu Raja R">
+        <img src="c.jpg" alt="Yesu Raja R">
       </div>
       <h1>YESU RAJA R</h1>
       <p>Information Technology Student | 2nd Year</p>
@@ -278,11 +278,11 @@
       <h2>Certificates</h2>
       <div class="certificates">
         <div>
-          <img src="/images/a.jpg" alt="Certificate 1">
+          <img src="a.jpg" alt="Certificate 1">
           <p>data analytics internship - navi tech</p>
         </div>
         <div>
-          <img src="/images/b.jpg" alt="Certificate 2">
+          <img src="b.jpg" alt="Certificate 2">
           <p>data analytics - navi tech</p>
         </div>
       </div>
